# op-govquests

./: .editorconfig  .gitignore  .tool-versions  Makefile  README.md  biome.json  lint-staged.common.js  lint-staged.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
apps/govquests-api/rails_app/: .annotaterb.yml  .rubocop.yml  .rubocop_todo.yml  Dockerfile  Gemfile  Makefile  Rakefile  lint-staged.config.js  pyproject.toml  schema.graphql
apps/govquests-api/rails_app/.kamal/: secrets
apps/govquests-api/rails_app/app/blueprints/: action_blueprint.rb  action_execution_blueprint.rb  quest_blueprint.rb
apps/govquests-api/rails_app/app/controllers/: action_completions_controller.rb  action_executions_controller.rb  application_controller.rb  discourse_controller.rb  email_verifications_controller.rb  graphql_controller.rb  quests_controller.rb  siwe_controller.rb
apps/govquests-api/rails_app/config/: application.rb  appsignal.rb  credentials.yml.enc  database.yml  deploy.yml  init.sql  puma.rb  recurring.yml  routes.rb  schedule.rb  storage.yml
apps/govquests-api/rails_app/db/: schema.rb  seeds.rb
apps/govquests-api/rails_app/lib/: agora_api.rb  configuration.rb  curia_hub_api.rb  discourse_api_client.rb  ens_subgraph_client.rb  gitcoin_passport_api.rb  read_models_configuration.rb  safe.rb  telegram_bot_server.rb
apps/govquests-api/rails_app/sorbet/: config
apps/govquests-api/rails_app/spec/: factories.rb  rails_helper.rb
apps/govquests-api/rails_app/test/: read_model_handler_test.rb  test_helper.rb
(+1067 files in other folders)
