[tool.poetry]
name = "infra-safe"
version = "0.1.0"
description = ""
authors = ["José Ribeiro <jose@bleu.studio>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
safe-eth-py = "6.0.0b41"
web3 = "6.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
